Changing swagger docs to take parameratized url
